Bug 488110 - Last Active Screen and Open Window Under Mouse Cover Seem to Be Clashing
Summary: Last Active Screen and Open Window Under Mouse Cover Seem to Be Clashing
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git-stable-Plasma/6.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2024-06-06 12:52 UTC by Dashon
Modified: 2024-07-06 02:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dashon 2024-06-06 12:52:18 UTC
SUMMARY
Hey I have been beta testing Plasma 6.1 for the last couple of weeks and I recall reading that changes were being made to make sure that apps open on the correct screen in a multi monitor setup. The problem I am having is that I actually want the application to open on the screen that has the mouse on it, so I went into system settings and made that change under the advanced tab of window behaviour. 

Howerver, as of Plasma 6.1 It seems that the last active screen takes precedence over that setting. Kinda making it seem as if it is not working at all. For example lets say that I have two monitors and open dolphin in full screen mode on monitor 2. I then move the mouse to monitor 1 and open yakuake. It will open on monitor 1 this time. However if I close yakuake and then open it again. This time and every time after that it will open on monitor 2 because with no apps open on monitor 1. Focus gets transferred to the app open on monitor 2. 

This happens for any combination of apps and not just yakuake. Another example is if I have dolphin open on monitor 2 and then open kwrite on monitor 1. Drag the mouse to close kwrite. Then open some other app. The mouse is still on monitor 1. The last screen I used is still monitor 1, but if I open kwrite again in this instance. It will open on monitor 2.

This means that anytime I want to open a window on monitor 1 and there is an open app on monitor 2. I need to constantly reach down and wiggle the mouse to keep it from opening on monitor 2 despite the fact that the mouse is already on monitor 1.

STEPS TO REPRODUCE
1. Open system settings -> window management -> window behavior -> advanced tab
2. Set Window Placement to be under mouse.

OBSERVED RESULT
Windows don't always open under the mouse and instead seem to be trying to detect what screen the user last interacted with. 

EXPECTED RESULT
The window should open under the mouse cursor.

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS 
KDE Plasma Version: 6.0.90
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.1
Kernel Version: 6.9.1-zen1-2-zen (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5800X 8-Core Processor
Memory: 62.7 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 3080/PCIe/SSE2
Manufacturer: Micro-Star International Co., Ltd.
Product Name: MS-7C95
System Version: 1.0
Comment 1 Bug Janitor Service 2024-07-04 15:28:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6048
Comment 2 Zamundaaa 2024-07-04 16:59:28 UTC
Git commit 40f50c9d0fc3e591010f4eb5f73db9624e0f4db0 by Xaver Hugl.
Committed on 04/07/2024 at 16:44.
Pushed by zamundaaa into branch 'master'.

placement: ignore the active output with place under mouse

M  +3    -4    src/placement.cpp

https://invent.kde.org/plasma/kwin/-/commit/40f50c9d0fc3e591010f4eb5f73db9624e0f4db0
Comment 3 Dashon 2024-07-04 19:41:06 UTC
(In reply to Zamundaaa from comment #2)
> Git commit 40f50c9d0fc3e591010f4eb5f73db9624e0f4db0 by Xaver Hugl.
> Committed on 04/07/2024 at 16:44.
> Pushed by zamundaaa into branch 'master'.
> 
> placement: ignore the active output with place under mouse
> 
> M  +3    -4    src/placement.cpp
> 
> https://invent.kde.org/plasma/kwin/-/commit/
> 40f50c9d0fc3e591010f4eb5f73db9624e0f4db0

Thanks.
Comment 4 Zamundaaa 2024-07-04 20:02:47 UTC
Git commit 429a6ab28a9e48d71cf69ecfb2989bb57ac47463 by Xaver Hugl.
Committed on 04/07/2024 at 19:48.
Pushed by zamundaaa into branch 'Plasma/6.1'.

placement: ignore the active output with place under mouse


(cherry picked from commit 40f50c9d0fc3e591010f4eb5f73db9624e0f4db0)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +3    -4    src/placement.cpp

https://invent.kde.org/plasma/kwin/-/commit/429a6ab28a9e48d71cf69ecfb2989bb57ac47463