placement: ignore the active output with place under mouse

BUG: 488110